chg: [API] added the possibility to delete a user
